--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,4 +1,4 @@
-name: generate animation
+acostaname: generate animation
 
 on:
   # run automatically every 24 hours
@@ -25,7 +25,7 @@ jobs:
     steps:
       # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
       - name: generate github-contribution-grid-snake.svg
-        uses: Platane/snk/svg-only@v3
+        uses: renanacosta/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
